--- a/.github/workflows/golangci.yaml
+++ b/.github/workflows/golangci.yaml
@@ -12,6 +12,7 @@ on:
       - 'go.mod'
       - 'go.sum'
       - 'qa_golangci.sh'
+      - '!example/**'
   pull_request:
     branches:
       - main
@@ -23,6 +24,7 @@ on:
       - 'go.mod'
       - 'go.sum'
       - 'qa_golangci.sh'
+      - '!example/**'
 
 jobs:
   golangci:
